--- a/docs/configuracion/sphinx/sphinx.conf
+++ b/docs/configuracion/sphinx/sphinx.conf
@@ -136,7 +136,7 @@ source src1
 	# sorting by this attr is equivalent to sorting by the original strings
 	#
 	 sql_attr_str2ordinal	= titulo_local
- 	 sql_attr_str2ordinal = autor
+# 	 sql_attr_str2ordinal = autor
 
 	# floating point attribute declaration
 	# multi-value (an arbitrary number of attributes is allowed), optional
