--- a/docs/configuracion/meran/meran.conf
+++ b/docs/configuracion/meran/meran.conf
@@ -40,6 +40,7 @@ ldappref=uid
 agregarDesdeLDAP=1
 url_prefix=/cgi-bin/koha
 picturesdir=/usr/share/meran/intranet/htdocs/uploads/pictures
+picturesdir_opac=/usr/share/meran/intranet/htdocs/uploads/pictures-opac
 reports_dir=/usr/share/meran/intranet/htdocs/uploads/reports
 covers=/usr/share/meran/intranet/htdoc/uploads/covers
 edocsdir=/usr/share/meran/intranet/htdocs/private-uploads/edocs
