--- a/docs/configuracion/meran/meran.conf
+++ b/docs/configuracion/meran/meran.conf
@@ -46,3 +46,4 @@ covers=/usr/share/meran/intranet/htdoc/uploads/covers
 edocsdir=/usr/share/meran/intranet/htdocs/private-uploads/edocs
 logosOpacPath=/usr/share/meran/opac/htdocs/logos
 logosIntraPath=/usr/share/meran/intranet/htdocs/private-uploads/logos
+novevadesOpacPath=/usr/share/meran/opac/htdocs/opac-tmpl/uploads/novedades
