--- a/docs/configuracion/meran/meran.conf
+++ b/docs/configuracion/meran/meran.conf
@@ -47,3 +47,4 @@ edocsdir=/usr/share/meran/intranet/htdocs/private-uploads/edocs
 logosOpacPath=/usr/share/meran/opac/htdocs/logos
 logosIntraPath=/usr/share/meran/intranet/htdocs/private-uploads/logos
 novedadesOpacPath=/usr/share/meran/opac/htdocs/opac-tmpl/uploads/novedades
+revisionLocal=/etc/meran/revisionLocal
