--- a/docs/configuracion/sphinx/sphinx.conf
+++ b/docs/configuracion/sphinx/sphinx.conf
@@ -76,7 +76,7 @@ source src1
 	# main document fetch query
 	# mandatory, integer document ID field MUST be the first selected column
         sql_query                               = \
-                SELECT id as id_local, id, titulo as titulo_local, titulo , autor, string, timestamp \
+                SELECT id as id_local, id, titulo as titulo_local, titulo , autor as autor_local , autor , string, timestamp \
                 FROM indice_busqueda
 
 
@@ -136,6 +136,7 @@ source src1
 	# sorting by this attr is equivalent to sorting by the original strings
 	#
 	 sql_attr_str2ordinal	= titulo_local
+         aql_attr_str2ordinal   = autor_local
 # 	 sql_attr_str2ordinal = autor
 
 	# floating point attribute declaration
