varios2 git ci varios

--- a/docs/configuracion/sphinx/sphinx.conf
+++ b/docs/configuracion/sphinx/sphinx.conf
@@ -22,9 +22,9 @@ source src1
 
 	# some straightforward parameters for SQL source types
 	sql_host				= localhost
-	sql_user				= root
-	sql_pass				= feedback
-	sql_db					= meran_testing
+	sql_user				= indice
+	sql_pass				= indice
+	sql_db					= Econo
 	sql_port				= 3306	# optional, default is 3306
 
 	# UNIX socket name
@@ -76,7 +76,7 @@ source src1
 	# main document fetch query
 	# mandatory, integer document ID field MUST be the first selected column
         sql_query                               = \
-                SELECT id as id_local, id, titulo as titulo_local, titulo , autor as autor_local , autor , string, timestamp \
+                SELECT id as id_local, id, titulo as titulo_local, titulo , autor, string, timestamp \
                 FROM indice_busqueda
 
 
@@ -136,8 +136,9 @@ source src1
 	# sorting by this attr is equivalent to sorting by the original strings
 	#
 	 sql_attr_str2ordinal	= titulo_local
-         aql_attr_str2ordinal   = autor_local
-# 	 sql_attr_str2ordinal = autor
+#         sql_attr_str2ordinal   = autor
+
+
 
 	# floating point attribute declaration
 	# multi-value (an arbitrary number of attributes is allowed), optional
@@ -536,7 +537,7 @@ charset_table = \
     U+FB43->U+05E3, U+FB44->U+05E4, U+FB46->U+05E6, U+FB47->U+05E7, U+FB48->U+05E8, U+FB49->U+05E9, U+FB4A->U+05EA, U+FB4B->U+05D5, U+FB4C->U+05D1, U+FB4D->U+05DB, U+FB4E->U+05E4, U+FB4F->U+05D0, U+05D0..U+05F2, U+0C85..U+0C8C, U+0C8E..U+0C90, U+0C92..U+0CA8,  \
     U+0CAA..U+0CB3, U+0CB5..U+0CB9, U+0CE0, U+0CE1, U+0CE6..U+0CEF, U+1900..U+191C, U+1930..U+1938, U+1946..U+194F, U+0D05..U+0D0C, U+0D0E..U+0D10, U+0D12..U+0D28, U+0D2A..U+0D39, U+0D60, U+0D61, U+0D66..U+0D6F, U+0B94->U+0B92, U+0B85..U+0B8A, U+0B8E..U+0B90,  \
     U+0B92, U+0B93, U+0B95, U+0B99, U+0B9A, U+0B9C, U+0B9E, U+0B9F, U+0BA3, U+0BA4, U+0BA8..U+0BAA, U+0BAE..U+0BB9, U+0BE6..U+0BEF, U+0E01..U+0E30, U+0E32, U+0E33, U+0E40..U+0E46, U+0E50..U+0E5B, U+FF10..U+FF19->0..9, U+FF21..U+FF3A->a..z, U+FF41..U+FF5A->a..z,  \
-    0..9, A..Z->a..z, a..z
+    0..9, A..Z->a..z, a..z, U+002D
 
 
 
@@ -555,7 +556,7 @@ charset_table = \
 	# minimum word infix length to index
 	# optional, default is 0 (do not index infixes)
 	#
-	 min_infix_len		= 2
+	 min_infix_len		= 1
 
 
 	# list of fields to limit prefix/infix indexing to
@@ -706,8 +707,9 @@ searchd
 	# multi-value, multiple listen points are allowed
 	# optional, default is 0.0.0.0:3312 (listen on all interfaces, port 3312)
 	#
-	#listen = 127.0.0.1:3312
-   	port = 3312
+	listen = 127.0.0.1:9312
+	listen = 127.0.0.1:3312
+        #port = 3312
 	#listen				= 127.0.0.1:9312
 	#listen				= 192.168.0.1:3312
 	#listen				= /tmp/searchd.sock
@@ -740,7 +742,7 @@ searchd
 	# max amount of matches the daemon ever keeps in RAM, per-index
 	# WARNING, THERE'S ALSO PER-QUERY LIMIT, SEE SetLimits() API CALL
 	# default is 1000 (just like Google)
-	max_matches			= 100000
+	max_matches                     = 100000
 
 	# seamless rotate, prevents rotate stalls if precaching huge datasets
 	# optional, default is 1
