--- a/docs/configuracion/sphinx/sphinx.conf
+++ b/docs/configuracion/sphinx/sphinx.conf
@@ -24,7 +24,7 @@ index meran
 {
 
 	source			= src_meran
-	path			= /var/log/indices-meran/index-meran
+	path			= /var/log/meran/index-meran
 	docinfo			= extern
 	mlock			= 0
 	morphology		= none
@@ -282,11 +282,11 @@ searchd
 
 	# log file, searchd run info is logged here
 	# optional, default is 'searchd.log'
-        log                                     = /var/log/indices-meran/searchd.log
+        log                                     = /var/log/meran/searchd.log
 	
 	# query log file, all search queries are logged here
 	# optional, default is empty (do not log queries)
-        query_log                       = /var/log/indices-meran/query.log
+        query_log                       = /var/log/meran/query.log
 
 	# client read timeout, seconds
 	# optional, default is 5
@@ -302,7 +302,7 @@ searchd
 
 	# PID file, searchd process ID file name
 	# mandatory
-	pid_file			= /var/log/indices-meran/searchd.pid
+	pid_file			= /var/log/meran/searchd.pid
 
 	# max amount of matches the daemon ever keeps in RAM, per-index
 	# WARNING, THERE'S ALSO PER-QUERY LIMIT, SEE SetLimits() API CALL
