--- a/docs/configuracion/meran/meran.conf
+++ b/docs/configuracion/meran/meran.conf
@@ -1,5 +1,7 @@
 database=meran
 hostname=localhost
+use_socket=1
+socket=/var/run/mysqld/mysqld.sock
 passINTRA=pepe23hoy
 userINTRA=kohaadmin
 passOPAC=pepe23hoy
