--- a/docs/configuracion/meran/meran.conf
+++ b/docs/configuracion/meran/meran.conf
@@ -51,3 +51,5 @@ logosIntraPath=/usr/share/meran/intranet/htdocs/private-uploads/logos
 novedadesOpacPath=/usr/share/meran/opac/htdocs/opac-tmpl/uploads/novedades
 revisionLocal=/etc/meran/revisionLocal
 plainPassword=0
+tipoDocumentoPath=/usr/share/meran/intranet/htdocs/uploads/covers
+portadasNivel2Path=/usr/share/meran/intranet/htdocs/uploads/covers-added
