--- a/docs/configuracion/meran/meran.conf
+++ b/docs/configuracion/meran/meran.conf
@@ -53,3 +53,4 @@ revisionLocal=/etc/meran/revisionLocal
 plainPassword=0
 tipoDocumentoPath=/usr/share/meran/intranet/htdocs/uploads/covers
 portadasNivel2Path=/usr/share/meran/intranet/htdocs/uploads/covers-added
+dtdPath=/usr/share/meran/intranet/cgi-bin/herramientas/importacion/
