--- a/docs/instalador/sphinx.conf
+++ b/docs/instalador/sphinx.conf
@@ -22,9 +22,9 @@ source src1
 
 	# some straightforward parameters for SQL source types
 	sql_host				= localhost
-	sql_user				= indice
-	sql_pass				= indice
-	sql_db					= econo2meran
+	sql_user				= reemplazarIUSER
+	sql_pass				= reemplazarIPASS
+	sql_db					= reemplazarDATABASE
 	sql_port				= 3306	# optional, default is 3306
 
 	# UNIX socket name
@@ -280,7 +280,7 @@ index test1
 
 	# index files path and file name, without extension
 	# mandatory, path must be writable, extensions will be auto-appended
-	path			= /var/log/meran/index-rooted-meran
+	path			= /var/log/meran/reemplazarID/index-rooted-meran
 
 	# document attribute values (docinfo) storage mode
 	# optional, default is 'extern'
@@ -718,11 +718,11 @@ searchd
 
 	# log file, searchd run info is logged here
 	# optional, default is 'searchd.log'
-	log					= /var/log/meran/searchd-rooted.log
+	log					= /var/log/meran/reemplazarID/searchd-rooted.log
 
 	# query log file, all search queries are logged here
 	# optional, default is empty (do not log queries)
-	query_log			= /var/log/meran/query-rooted.log
+	query_log			= /var/log/meran/reemplazarID/query-rooted.log
 
 	# client read timeout, seconds
 	# optional, default is 5
@@ -738,7 +738,7 @@ searchd
 
 	# PID file, searchd process ID file name
 	# mandatory
-	pid_file			= /var/log/meran/searchd-rooted.pid
+	pid_file			= /var/log/meran/reemplazarID/searchd-rooted.pid
 
 	# max amount of matches the daemon ever keeps in RAM, per-index
 	# WARNING, THERE'S ALSO PER-QUERY LIMIT, SEE SetLimits() API CALL
