--- a/docs/instalador/meran.conf
+++ b/docs/instalador/meran.conf
@@ -17,12 +17,12 @@ debug=128
 debug_file=/var/log/meran/reemplazarID/debug_file.txt
 userAdmin=userAdmin
 passAdmin=kohaadmin
-userOPAC=userOPAC
-passOPAC=opac
-userINTRA=userINTRA
-passINTRA=intra
-userDevelop=userDevelop
-passDevelop=dev
+userOPAC=reemplazarUSER
+passOPAC=reemplazarPASS
+userINTRA=reemplazarUSER
+passINTRA=reemplazarPASS
+userDevelop=reemplazarUSER
+passDevelop=reemplazarPASS
 charset=utf-8
 tema=default
 temas=/intranet-tmpl/temas
