--- a/docs/configuracion/meran/meran.conf
+++ b/docs/configuracion/meran/meran.conf
@@ -30,6 +30,7 @@ sphinx_conf=/usr/share/meran/sphinx2/etc/sphinx/sphinx.conf
 includes_general=/usr/share/meran/includes/
 demo=0
 token=0
+opac_port=80
 ldapenabled=0
 ldapsuf=dc=unlp,dc=edu,dc=ar
 ldappass=uid=searchUser,dc=unlp,dc=edu,dc=ar
