--- a/docs/instalador/meran.conf
+++ b/docs/instalador/meran.conf
@@ -30,6 +30,7 @@ temasOPAC=/opac-tmpl/temas
 sphinx_conf=/usr/share/meran/reemplazarID/sphinx/etc/sphinx.conf
 includes_general=/usr/share/meran/reemplazarID/includes/
 token=0
+opac_port = 80
 plainPassword=0
 agregarDesdeLDAP=1
 url_prefix=/meran
