--- a/docs/instalador/meran.conf
+++ b/docs/instalador/meran.conf
@@ -28,6 +28,7 @@ tema=default
 temas=/intranet-tmpl/temas
 temasOPAC=/opac-tmpl/temas
 sphinx_conf=reemplazarPATHBASE/reemplazarID/sphinx/etc/sphinx.conf
+sphinx_bin_dir=/reemplazarPATHBASE/reemplazarID/sphinx/bin/
 includes_general=reemplazarPATHBASE/reemplazarID/includes/
 token=0
 opac_port = 80
