--- a/sphinx2/etc/sphinx.conf
+++ b/sphinx2/etc/sphinx.conf
@@ -10,10 +10,11 @@ source src_meran
         sql_sock                               = /var/run/mysqld/mysqld.sock
 	sql_query_pre			= SET NAMES utf8
     sql_query               = \
-        SELECT id as id_local, id, titulo as titulo_local, titulo , autor, string, timestamp \
+        SELECT id as id_local, id, titulo as titulo_local, titulo , autor, string, timestamp, hits as hits \
         FROM indice_busqueda
 
 	sql_attr_uint			= id
+        sql_attr_uint                   = hits
 	sql_attr_timestamp		= timestamp
 	sql_attr_str2ordinal    = titulo_local
 	sql_ranged_throttle	= 0
