--- a/docs/configuracion/sphinx/sphinx.conf
+++ b/docs/configuracion/sphinx/sphinx.conf
@@ -9,15 +9,18 @@ source src_meran
 	sql_port				= 3306	# optional, default is 3306
         sql_sock                               = /var/run/mysqld/mysqld.sock
 	sql_query_pre			= SET NAMES utf8
-    sql_query               = \
-        SELECT id as id_local, id, titulo as titulo_local, titulo , autor, string, timestamp \
-        FROM indice_busqueda
+
+     sql_query                               = \
+                SELECT id as id_local, id, titulo as titulo_local, titulo , autor, autor as autor_local, string, timestamp, hits as hits \
+                FROM indice_busqueda
 
 	sql_attr_uint			= id
 	sql_attr_timestamp		= timestamp
-	sql_attr_str2ordinal    = titulo_local
-	sql_ranged_throttle	= 0
-	sql_query_info          = SELECT * FROM indice_busqueda WHERE id=$id
+        sql_attr_str2ordinal   		= titulo_local
+        sql_attr_str2ordinal   		= autor_local
+	sql_attr_uint                  	= hits
+	sql_ranged_throttle		= 0
+	sql_query_info          	= SELECT * FROM indice_busqueda WHERE id=$id
 }
 
 index meran
