--- a/docs/instalador/meran.conf
+++ b/docs/instalador/meran.conf
@@ -31,6 +31,7 @@ sphinx_conf=reemplazarPATHBASE/reemplazarID/sphinx/etc/sphinx.conf
 sphinx_bin_dir=/reemplazarPATHBASE/reemplazarID/sphinx/bin/
 includes_general=reemplazarPATHBASE/reemplazarID/includes/
 token=0
+timeout=0
 opac_port = 80
 plainPassword=0
 agregarDesdeLDAP=1
